# StarryPilot

./: .gitignore  LICENSE  README.md  中文说明.md
simulator/Gazebo_QuadSim/: readme.md
simulator/Gazebo_QuadSim/mav_comm/: README.md
simulator/Gazebo_QuadSim/mav_comm/mav_comm/: CHANGELOG.rst  CMakeLists.txt  package.xml
simulator/Gazebo_QuadSim/mav_comm/mav_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
simulator/Gazebo_QuadSim/mav_comm/mav_msgs/cmake/: export_flags.cmake
simulator/Gazebo_QuadSim/mav_comm/mav_msgs/include/mav_msgs/: common.h  conversions.h  default_topics.h  default_values.h  eigen_mav_msgs.h
simulator/Gazebo_QuadSim/mav_comm/mav_msgs/msg/: Actuators.msg  AttitudeThrust.msg  FilteredSensorData.msg  GpsWaypoint.msg  RateThrust.msg  RollPitchYawrateThrust.msg  Status.msg  TorqueThrust.msg
simulator/Gazebo_QuadSim/mav_comm/planning_msgs/: CMakeLists.txt  mainpage.dox  package.xml
simulator/Gazebo_QuadSim/mav_comm/planning_msgs/include/planning_msgs/: conversions.h  eigen_planning_msgs.h
simulator/Gazebo_QuadSim/mav_comm/planning_msgs/msg/: Point2D.msg  PointCloudWithPose.msg  Polygon2D.msg  PolygonWithHoles.msg  PolygonWithHolesStamped.msg  PolynomialSegment4D.msg  PolynomialTrajectory4D.msg
simulator/Gazebo_QuadSim/mav_comm/planning_msgs/srv/: PlannerService.srv  PolygonService.srv
simulator/Gazebo_QuadSim/mavlink/: CMakeLists.txt  package.xml
simulator/Matlab_QuadSim/: ADRC_Quadcopter_Simulation.slx  Quadrotor3D.mat  QuadrotorControl.mat  QuadrotorModel.mat  QuadrotorState.mat  aa.ps  draw_quadrotor_3D.m  filledCircle.m  get_gyroscopic_moment.m  get_sensor.m  get_torque.m  init_disp.asv  init_disp.m  init_var.m  main.m  quadModel_X.mat  quadsim_run.m  readme.md  record.m  record_data.m  test.m  throttle_compensate.m  updateUI.m  update_quadmodel.m  update_quadrotor_3D.m
simulator/Matlab_QuadSim/adrc/: adrc_cleso.m  adrc_eso.m  adrc_leso.m  adrc_nlsef.m  adrc_td.m  adrc_td2.m  draw_adrc.m  fal.m  fhan.m  nlsef.m  td_controller.m
simulator/Matlab_QuadSim/control/: adrc_control.m  altitude_control.m  att_controller_output.m  attitude_control.m  control_alt.m  disturb_comp.m  eso.m  get_target_euler.m  rotor_dynamic.m  throttle_mix.m
simulator/Matlab_QuadSim/math/: constrain.m  create_ringbuffer.m  rb_is_empty.m  rb_pop.m  rb_push.m
simulator/Matlab_QuadSim/quaternion/: euler2quaternion.m  quaternion2euler.m  rotation_mat_body2inertia.m  rotation_mat_inertia2body.m  update_quaternion.m
simulator/Matlab_QuadSim/tool/: compensate_delay.m  model_calculate.m  motor_delay.txt  motor_delay_plot.fig  motor_model_test.m  motor_plot.m  plot_fal.m  plot_fhan.m  rpm_plot.m  step_gen.m  td_control.m
starry_fmu/Application/: SConscript  application.c  startup.c
starry_fmu/Driver/: SConscript  stm32f4xx_eth.c  stm32f4xx_eth.h  stm32f4xx_it.c
starry_fmu/Driver/board/: board.c
starry_fmu/Driver/gpio/: gpio.c
starry_fmu/Driver/gps/: gps.c
starry_fmu/Driver/hmc5883/: hmc5883.c
starry_fmu/Driver/hw_timer/: drv_hwtimer.c
starry_fmu/Driver/i2c/: i2c_soft.c
starry_fmu/Driver/include/: board.h  gps.h  gps_ubx.h  hmc5883.h  i2c_soft.h  incapture.h  l3gd20h.h  lsm303d.h  mpu6000.h  ms5611.h  pwm.h  pwm_io.h  sdio.h  stm32f4_spi.h  stm32f4xx_conf.h
starry_fmu/Driver/l3gd20h/: l3gd20h.c
starry_fmu/Driver/lidar/: lidar.c
starry_fmu/Driver/lsm303d/: lsm303d.c
starry_fmu/Driver/mpu6000/: mpu6000.c
starry_fmu/Driver/ms5611/: ms5611.c
starry_fmu/Driver/pwm/: incapture.c  pwm.c  pwm_io.c
starry_fmu/Driver/rtc/: stm32f4_rtc.c
starry_fmu/Driver/sdio/: sdio.c
starry_fmu/Driver/spi/: stm32f4_spi.c
starry_fmu/Driver/usart/: usart.c
starry_fmu/Framework/: SConscript
starry_fmu/Framework/include/: AHRS.h  MARG_AHRS.h  Sensor_Manager_temp.h  adrc.h  adrc_att.h  ap_math.h  att_estimator.h  att_pid.h  balance_car_motor.h  butter.h  calibration.h  console.h  control_alt.h  control_main.h  conversion.h  copter_main.h  declination.h  delay.h  ekf.h  fast_loop.h  fifo.h  file_manager.h  filter.h  fir.h  ftp_manager.h  global.h  hil_interface.h  kalman.h  kf.h  led.h  light_matrix.h  logger.h  mavlink_param.h  mavlink_protocol.h  mavlink_status.h  mavproxy.h  msh_usr_cmd.h  param.h  pid.h  pos_estimator.h  (+16 more)
starry_fmu/HAL/: SConscript
starry_io/Project/: SConscript  SConstruct  debug.c  debug.h  global.c  global.h  led.c  lidar_lite.c  lidar_lite.h  main.c  ppm_capture.c  ppm_capture.h  protocol.c  protocol.h  pwm.c  pwm.h  rtconfig.h  rtconfig.py  sbus.c  sbus.h  system_stm32f10x.c  time.c  time.h  usart.c  usart.h
starry_io/tools/: building.py
tool/Calibration/: ACC.TXT  MAG.TXT  README.txt  ellipsoid_fit.asv  ellipsoid_iteration_fit.m  my_ellipsoid_fit.m  my_ellipsoid_fit2.m  run_ellipsoid_fit.m
tool/EKF/: EKF14.m  EKF_Init.m  quad2euler.m  readlog.m  trinocular_op.m
tool/Log Checker/: log_checker.m
tool/calibrate_sensor/: ACC.TXT  MAG.TXT  README.txt  calibrate_sensor.m  ellipsoid_fit.m
tool/calibration/: calibrate_sensor.m  ellipsoid_fit_run.m
tool/log_parser/: log_parse.m  log_parse.prj  run_logparse.m
(+408 files in other folders)
